--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/paw.png" />
+    <link rel="icon" href="%PUBLIC_URL%/xunlu.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>
-      Meow Meow
+      Patronus
     </title>
   </head>
   <body>
